---------------------------------------------------------------------------------------------------
Version: ?
Date: ?
  Changes:
    - Binoculars zoom level is now configurable.
  Bugfixes:
    - When zooming out after map move is disabled, it is no longer possible to zoom out from the 'zoom to world' view to the map view.
    - Quick zoom out does no longer reset last known map position.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 06/04/2019
  Changes:
    - Added Binoculars item that opens a map in the 'zoom to world' view at given position. Can be used from the map view to zoom in quickly. Although it behaves like an artillery remote (including that it can only be used within artillery range), don't worry - artillery will not fire at that location.
    - Added new thumbnail.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 05/04/2019
  Info:
    - Initial release.