@@ -3,5 +3,6 @@ return {
     MAX_MAP_ZOOM_IN_LEVEL = 1,
     MAX_MAP_ZOOM_OUT_LEVEL = 0.0001,
     BASE_GAME_PLAYER_ZOOM_SENSITIVITY = 1.1,
-    BASE_GAME_ANY_MAP_ZOOM_SENSITIVITY = 1.25
+    BASE_GAME_ANY_MAP_ZOOM_SENSITIVITY = 1.25,
+    MIN_MAP_ZOOM_LEVEL_WITH_LABELS_VISIBLE = 0.0157
 }
